testsuite/tests/linear/should_fail/TypeClass.stderr

TypeClass.hs:45:7: error: [GHC-39999]
    • No instance for ‘Iden (FUN One)’ arising from a use of ‘iden’
    • In the expression: iden
      In an equation for ‘foo’: foo = iden
